# ObsidianEngine

./: CMakeLists.txt
ObsidianEngine/: CMakeLists.txt
ObsidianEngine/cmake/: Findglfw3.cmake
ObsidianEngine/include/: Application.h  RenderDevice.h  StringLiteral.h  Vector.h  Vertex.h  VulkanDevice.h  VulkanPipeline.h  VulkanPipelineBuilder.h  VulkanSwapchain.h  Window.h
ObsidianEngine/include/ObsidianEngine/: Application.h  ComponentPool.h  Entity.h  EntryPoint.h  GLDevice.h  Matrix.h  MeshComponent.h  MeshRenderData.h  ObsidianTime.h  Quaternion.h  Registry.h  RenderDevice.h  RenderSystem.h  Scene.h  ShaderCompiler.h  SparseSet.h  Vertex.h  View.h  VulkanDevice.h  VulkanSwapchain.h  Window.h
ObsidianEngine/include/ObsidianEngine/ECS/: ComponentPool.h  Entity.h  Registry.h  Scene.h  SparseSet.h  System.h  View.h
ObsidianEngine/include/ObsidianEngine/Math/: Math.h  Math.hpp  MathUtils.h  MathUtils.hpp  Matrix.h  Quaternion.h  Swizzle.h  Vector.h  Vector3.ipp
ObsidianEngine/include/ObsidianEngine/Math/Matrix/: Matrix4x4.h  Matrix4x4.hpp  MatrixLayout.hpp  MatrixMxN.h  MatrixMxN.hpp  MatrixMxN.ipp  MatrixTypes.h  MatrixTypes.hpp
ObsidianEngine/include/ObsidianEngine/Math/Quaternion/: Quaternion.h  Quaternion.hpp  QuaternionTypes.h  QuaternionTypes.hpp
ObsidianEngine/include/ObsidianEngine/Math/Vector/: Swizzle.h  Swizzle.hpp  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp  Vector4.h  Vector4.hpp  VectorBase.h  VectorBase.hpp  VectorN.h  VectorN.hpp  VectorTypes.h  VectorTypes.hpp
ObsidianEngine/include/ObsidianEngine/ObScript/: AST.hpp  Compiler.hpp  Lexer.hpp  Opcode.hpp  Parser.hpp  ScriptComponent.hpp  ScriptSystem.hpp  ScriptValue.hpp  VirtualMachine.hpp
ObsidianEngine/projects/SpinningaTriangle/: CMakeLists.txt  SpinningTriangleApplication.h  main.cpp
ObsidianEngine/projects/sierpinski/: CMakeLists.txt  SierpinskiTriangleApplication.h  main.cpp
ObsidianEngine/shaders/: shader.slang
ObsidianEngine/src/: Application.cpp  ObsidianEngine.cpp  ObsidianTime.cpp  ShaderCompiler.cpp  SparseSet.cpp  VulkanDevice.cpp  VulkanPipelineBuilder.cpp  VulkanSwapchain.cpp  Window.cpp
ObsidianEngine/tests/: CMakeLists.txt
ObsidianEngine/tests/include/: helpers.h
ObsidianEngine/tests/src/Math/: Matrix4x4Tests.cpp  MatrixTests.cpp  QuaternionTests.cpp  VectorTests.cpp
